# napari-image-similarity-search

./: .readthedocs.yaml  LICENSE  README.md  environment.yml  setup.cfg
docs/source/: conf.py  index.rst  requirements.txt
src/napari_image_similarity_search/: __init__.py  label_save_images.py  main.py  main_window.py  napari.yaml  search_and_import_files.py  selected_images.py  widget_definitions.py
