[metadata]
name = napari-image-similarity-search
version = 0.0.1
author = Kylie Frew
author_email = kyliefrew@gmail.com
description = A napari plug-in that uses UMAP to identify image similarity for labeling
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kyfrew/napari-image-similarity-search
classifiers =
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Framework :: napari
project_urls =
    Bug Tracker = https://github.com/kyfrew/napari-image-similarity-search/issues
    Documentation = https://github.com/kyfrew/napari-image-similarity-search#README.md
    Source Code = https://github.com/kyfrew/napari-image-similarity-search
    User Support = https://github.com/kyfrew/napari-image-similarity-search/issues

[options]
package_dir =
    = src
install_requires =
	napari>=0.4.16
	matplotlib
    numpy
    Pillow
    umap-learn
    qtpy
    PyQt5
packages = find:
python_requires = >=3.7
include_package_data = True

[options.extras_require]
docs =
    sphinx
    sphinx-automodapi
    numpydoc

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    run-napari-image-similarity-search = napari_image_similarity_search.main:main





